# nlpFromScratch

./: README.md  pyproject.toml
data/: test.txt  test_2.txt
src/: logistic_test.py
src/model/: logisticsRegression.py  loss.py  optimizer.py
src/utils/: data.py
