[tool.poetry]
name = "nlpfromscratch"
version = "0.0.0"
description = "nlp project"
authors = ["xinbingzhe <xinbingzhe@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
